[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# from https://peps.python.org/pep-0621/
[project]
name = "command-utils"
version = "0.12.0"
description = "command line utilties"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Qian" }, { email = "gokinjolno112358@gmail.com" }]
maintainers = []
keywords = ["command line"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["typer[all]~=0.9.0", "pikepdf~=8.5.3"]

[project.optional-dependencies]
dev = ["flake8", "isort", "black", "mypy", "ipython", "pre-commit"]

[project.urls]
Source = "https://github.com/i1123581321/command-utils"

[project.scripts]
clip-video = "ffmpeg_utils.clip_video:main"
delay-sub = "ffmpeg_utils.delay_sub:main"
flac-to-mp3 = "ffmpeg_utils.flac_to_mp3:main"
split-video = "ffmpeg_utils.split_video:main"
video-to-gif = "ffmpeg_utils.video_to_gif:main"
split-text = "text_utils.split_text:main"
zip-all = "zip_utils.zip_all:main"
rename-sub = "common_utils.rename_sub:main"
extract-audio = "ffmpeg_utils.extract_audio:main"
unlock-pdf = "pdf_utils.unlock_pdf:main"
convert-quote = "text_utils.convert_quote:main"

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages = false

disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

extra_checks = true
strict_equality = true
