[metadata]
name = command_utils
version = 0.1.0
author = ZhengxuanQian
author_email = gokinjolno112358@gmail.com
description = command line utilities
long_description = file: README.md
long_description_type = text/markdown
url = https://github.com/i1123581321/command_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    split_video = ffmpeg_utils.split_video:main